# mag-vkr

./: CMakeLists.txt
include/vkr/: common.hpp  config.hpp
include/vkr/geometry/: intersections.hpp  morton.hpp  primitives.hpp
include/vkr/geometry/collision/: collision_query.hpp  hit_result.hpp  uniform_grid.hpp
include/vkr/geometry/corridors/: corridor.hpp  corridor_segment.hpp  spatial_corridor_map.hpp
include/vkr/geometry/dynamic_obstacles/: sob_builder.hpp  swept_obb.hpp  swept_obb_bvh.hpp
include/vkr/geometry/static_obstacles/: bounding_sphere_tree.hpp  bst_builder.hpp  bst_node.hpp
include/vkr/landing/: landing_unit.hpp  types.hpp
include/vkr/math/simd/: batch_operations.hpp  simd_utils.hpp
include/vkr/math/wavelets/: haar_wavelet_2d.hpp  wavelet_transform_2d.hpp
include/vkr/planning/: amcp_planner.hpp  grid_node.hpp  multi_resolution_grid.hpp  plan_request.hpp  plan_result.hpp
include/vkr/planning/search/: ara_star.hpp  dstar_lite.hpp  search_node.hpp
include/vkr/terrain/: qwg_builder.hpp  types.hpp  wavelet_grid.hpp
src/geometry/: intersections.cpp  morton.cpp
src/geometry/collision/: collision_query.cpp  uniform_grid.cpp
src/geometry/corridors/: spatial_corridor_map.cpp
src/geometry/dynamic_obstacles/: sob_builder.cpp  swept_obb.cpp  swept_obb_bvh.cpp
src/geometry/static_obstacles/: bounding_sphere_tree.cpp  bst_builder.cpp
src/landing/: landing_unit.cpp
src/math/simd/: batch_operations.cpp
src/math/wavelets/: haar_wavelet_2d.cpp  wavelet_transform_2d.cpp
src/planning/: amcp_planner.cpp  multi_resolution_grid.cpp
src/planning/search/: ara_star.cpp  dstar_lite.cpp
src/terrain/: qwg_builder.cpp  wavelet_grid.cpp
tests/: CMakeLists.txt
tests/unit/geometry/: test_intersections.cpp  test_morton.cpp
tests/unit/geometry/collision/: test_collision_query.cpp  test_uniform_grid.cpp
tests/unit/geometry/corridors/: test_spatial_corridor_map.cpp
tests/unit/geometry/dynamic_obstacles/: test_sob_builder.cpp  test_swept_obb.cpp  test_swept_obb_bvh.cpp
tests/unit/geometry/static_obstacles/: test_bounding_sphere_tree.cpp
tests/unit/landing/: test_landing_unit.cpp
tests/unit/math/simd/: test_batch_operations.cpp
tests/unit/math/wavelets/: test_haar_wavelet_2d.cpp
tests/unit/planning/: test_amcp_planner.cpp  test_multi_resolution_grid.cpp
tests/unit/planning/search/: test_ara_star.cpp  test_dstar_lite.cpp
tests/unit/terrain/: test_qwg_builder.cpp  test_wavelet_grid.cpp
vkr_ros/vkr_msgs/: CMakeLists.txt  package.xml
vkr_ros/vkr_msgs/msg/: CorridorFreeEvent.msg  LandingCandidate.msg  ObstacleInfo.msg  Path.msg
vkr_ros/vkr_ros/: CMakeLists.txt  package.xml
vkr_ros/vkr_ros/include/vkr_ros/: collision_server.hpp  corridor_manager.hpp  landing_detector.hpp  planner_node.hpp  state_machine.hpp
vkr_ros/vkr_ros/launch/: px4_multi_sitl.launch.py  uav_nodes.launch.py  vkr_full_system.launch.py  vkr_system.launch.py
vkr_ros/vkr_ros/scripts/: generate_missions.py  obstacles_to_world_file.py  prepare_obstacles.py
vkr_ros/vkr_ros/src/: collision_server.cpp  collision_server_main.cpp  corridor_manager.cpp  corridor_manager_main.cpp  landing_detector.cpp  landing_detector_main.cpp  planner_node.cpp  planner_node_main.cpp  state_machine.cpp  state_machine_main.cpp
vkr_ros/vkr_ros/worlds/: terrain.world
vkr_ros/vkr_srvs/: CMakeLists.txt  package.xml
vkr_ros/vkr_srvs/srv/: CheckCapsule.srv  CheckIntrusion.srv  CheckPath.srv  CheckSegment.srv  CreateCorridor.srv  GetDistance.srv  RemoveCorridor.srv  UpdateCorridor.srv
